Automated sort|diff test to verify dist extractor output