@@ -24,7 +24,44 @@
                 <configuration>
                     <launchers>
                         <launcher>
-                            <id>dist-extraction</id>
+                            <id>download</id>
+                            <mainClass>org.dbpedia.extraction.dump.download.Download</mainClass>
+                            <!--
+                            <jvmArgs>
+                                <jvmArg>-Dhttp.proxyHost=proxy.server.com</jvmArg>
+                                <jvmArg>-Dhttp.proxyPort=port</jvmArg>
+                                <jvmArg>-Dhttp.proxyUser=user</jvmArg>
+                                <jvmArg>-Dhttp.proxyPassword=password</jvmArg>
+                                <jvmArg>-Dhttp.nonProxyHosts="localhost|127.0.0.1"</jvmArg>
+                             </jvmArgs>
+                             -->
+                            <!-- ../run download config=download.properties -->
+                        </launcher>
+
+                        <!-- A launcher for sequential extraction - useful for testing/verifying results -->
+                        <launcher>
+                            <id>seq-extraction</id>
+                            <mainClass>org.dbpedia.extraction.dump.extract.Extraction</mainClass>
+
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <!--
+                                <jvmArg>-Xmx4096m</jvmArg>
+                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <jvmArg>-XX:+PrintGC</jvmArg>
+                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
+                                <jvmArg>-Dhttp.proxyHost=proxy.server.com</jvmArg>
+                                <jvmArg>-Dhttp.proxyPort=80</jvmArg>
+                                <jvmArg>-Dhttp.proxyUser=user</jvmArg>
+                                <jvmArg>-Dhttp.proxyPassword=password</jvmArg>
+                                <jvmArg>-Dhttp.nonProxyHosts="localhost|127.0.0.1"</jvmArg>
+                                -->
+                            </jvmArgs>
+                        </launcher>
+
+                        <launcher>
+                            <id>extraction</id>
                             <mainClass>org.dbpedia.extraction.dump.extract.DistExtraction</mainClass>
 
                             <jvmArgs>
